Se agrega eliminar vehiculo y editar vehiculo

--- a/admin/home_section/reports.html
+++ b/admin/home_section/reports.html
@@ -1,4 +1,4 @@
-<div id="reports" class="content-section">
+<div id="reports" class="content-section active">
     <h2>Reportes de Alquiler de Autos</h2>
     <p>Aquí puedes ver y descargar diferentes tipos de reportes relacionados con el alquiler de autos.</p>
 
