se agrego eliminar alquiler

--- a/employee/home_section/modals/contrato.html
+++ b/employee/home_section/modals/contrato.html
@@ -8,7 +8,7 @@
         <div class="modal-body">
           <form id="editForm">            
             <div class="mb-3">            
-              <label for="nombre" class="form-label">El auto con la matricula<b id="matriculaC"></b> fue alquilado por <b id="nombreC"></b> el <b id="fechaI"></b></label>              
+              <label class="form-label">El auto con la matricula<b id="matriculaC"></b> fue alquilado por <b id="nombreC"></b> el <b id="fechaI"></b></label>              
             </div>            
           </form>
         </div>
