--- a/admin/home_section/modals/modal_editVehicle.html
+++ b/admin/home_section/modals/modal_editVehicle.html
@@ -6,28 +6,38 @@
         <h5 class="modal-title" id="editModalLabel">Editar Vehiculo</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+      <div id="alertaed" class="alert d-none" role="alert"></div>
       <div class="modal-body">
         <form id="editFormVehicle">
           <input type="hidden" name="id" id="editVehicleId">
           <div class="mb-3">
             <label for="editMarca" class="form-label">Marca</label>
             <input type="text" class="form-control" id="editMarca" name="editMarca">
+            <small id="marcaHelp" class="form-text text-muted">Edite la marca del vehículo.</small>
           </div>
           <div class="mb-3">
             <label for="editModelo" class="form-label">Modelo</label>
             <input type="text" class="form-control" id="editModelo" name="editModelo">
+            <small id="marcaHelp" class="form-text text-muted">Edite el modelo del vehículo.</small>
           </div>
           <div class="mb-3">
             <label for="editMatricula" class="form-label">Matricula</label>
-            <input type="text" class="form-control" id="editMatricula" name="editMatricula">
+            <input type="text" class="form-control" id="editMatricula" name="editMatricula" pattern="[A-Z]{3}-[0-9]{3}"
+              required>
+            <small class="form-text text-muted">Formato esperado: 3 letras mayúsculas seguidas de un guion y
+              3 dígitos numéricos (Ej: ABC-123).</small>
+          </div>
+          
+          <div class="mb-3">
+            <label for="editDisponibilidad" class="form-label">Disponibilidad</label>
+            <select type="text" class="form-select" id="editDisponibilidad" name="editDisponibilidad">
+              <option value="Disponible">Disponible</option>
+              <option value="No disponible">No disponible</option>
+            </select>
           </div>
           <div class="mb-3">
             <label for="editTarifa" class="form-label">Tarifa</label>
-            <input type="number" class="form-control" id="editTarifa" name="editTarifa">
-          </div>
-          <div class="mb-3">
-            <label for="editColor" class="form-label">Color</label>
-            <input type="text" class="form-control" id="editColor" name="editColor">
+            <input type="number" class="form-control" id="editTarifa" name="editTarifa" min="0.01" step="0.01" required>
           </div>
           <div class="mb-3">
             <label for="editEstado" class="form-label">Estado</label>
@@ -48,11 +58,30 @@
             </select>
           </div>
           <div class="mb-3">
-            <label for="editDisponibilidad" class="form-label">Disponibilidad</label>
-            <select type="text" class="form-select" id="editDisponibilidad" name="editDisponibilidad">
-              <option value="Disponible">Disponible</option>
-              <option value="No disponible">No disponible</option>              
+            <label for="editTransmision" class="form-label">Tipo de transmision</label>
+            <select id="editTransmision" name="editTransmision" class="form-select" required>
+              <option value="automatico">Automatico</option>
+              <option value="manual">Manual</option>
             </select>
+          </div>
+          <div class="mb-3">
+            <label for="editCombustible" class="form-label">Tipo de combustible</label>
+            <select id="editCombustible" name="editCombustible" class="form-select" required>
+              <option value="extra">Extra</option>
+              <option value="super">Super</option>
+              <option value="diesel">Diesel</option>
+              <option value="electricidad">Electricidad</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="editCilindraje" class="form-label">Cilindraje</label>
+            <input type="text" class="form-control" id="editCilindraje" name="editCilindraje"
+              placeholder="Ej: 1.6L o 2000 cc" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="editDescripcion" class="form-label">Descripción</label>
+            <textarea class="form-control" id="editDescripcion" name="editDescripcion" rows="3"></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Guardar Cambios</button>
         </form>
