--- a/admin/home_section/modals/modal_editUser.html
+++ b/admin/home_section/modals/modal_editUser.html
@@ -6,12 +6,17 @@
           <h5 class="modal-title" id="editModalLabel">Editar Usuario</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+        <div id="alertaE" class="alert alert-danger" style="display:none;" role="alert"></div>
         <div class="modal-body">
           <form id="editForm">
-            <input type="hidden" name="id" id="editUserId">
+            <input type="hidden" name="id" id="editUserId">            
             <div class="mb-3">
-              <label for="nombre" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="editUserName" name="nombre">
+              <label for="password" class="form-label">Contraseña</label>
+              <input type="password" class="form-control" id="password" name="password" required minlength="6">
+            </div>
+            <div class="mb-3">
+              <label for="passwordC" class="form-label">Confirmar Contraseña</label>
+              <input type="password" class="form-control" id="passwordC" name="passwordC" required minlength="6">
             </div>
             <button type="submit" class="btn btn-primary">Guardar Cambios</button>
           </form>
