--- a/employee/home_section/modals/modal_editDev.html
+++ b/employee/home_section/modals/modal_editDev.html
@@ -29,6 +29,13 @@
                           <option value="no">No</option>
                       </select>
                   </div>
+                  <div class="mb-3">
+                    <label for="metodo_pago" class="form-label">Metodo de Pago</label>
+                    <select class="form-select" id="metodo_pago" name="metodo_pago" required>
+                        <option value="tarjeta">Tarjeta</option>
+                        <option value="efectivo">Efectivo</option>
+                    </select>
+                </div>
 
                   <!-- Cargos Extra -->
                   <div class="mb-3">
