--- a/admin/home_section/modals/modal_addVehicle.html
+++ b/admin/home_section/modals/modal_addVehicle.html
@@ -1,92 +1,111 @@
 <div class="modal fade" id="addVehicleModal" tabindex="-1" aria-labelledby="addUserModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addUserModalLabel">Agregar Nuevo Vehiculo</h5>
+                <h5 class="modal-title" id="addUserModalLabel">Agregar Nuevo Vehículo</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div id="alertaadd" class="alert d-none" role="alert"></div>
             <div class="modal-body">
                 <form id="formAddVehicle" enctype="multipart/form-data">
-                    <div class="mb-3">
-                        <label for="marca" class="form-label">Marca</label>
-                        <input type="text" class="form-control" id="marca" name="marca" aria-describedby="marcaHelp"
-                            required>
-                        <small id="marcaHelp" class="form-text text-muted">Ingrese la marca del vehículo.</small>
-
+                    <div class="row g-3">
+                        <!-- Marca -->
+                        <div class="col-md-6">
+                            <label for="marca" class="form-label">Marca</label>
+                            <select class="form-select" id="marca" name="marca" required>
+                                <option value="" disabled selected>Seleccione una marca</option>
+                            </select>
+                        </div>
+                        <!-- Modelo -->
+                        <div class="col-md-6">
+                            <label for="modelo" class="form-label">Modelo</label>
+                            <select class="form-select" id="modelo" name="modelo" required>
+                                <option value="" disabled selected>Seleccione un modelo</option>
+                            </select>
+                        </div>
+                        <!-- Matricula -->
+                        <div class="col-md-6">
+                            <label for="matricula" class="form-label">Matrícula</label>
+                            <input type="text" class="form-control" id="matricula" name="matricula"
+                                pattern="[A-Z]{3}-[0-9]{3}" required>
+                        </div>
+                        <!-- Disponibilidad -->
+                        <div class="col-md-6">
+                            <label for="disponibilidad" class="form-label">Disponibilidad</label>
+                            <select id="disponibilidad" name="disponibilidad" class="form-select" required>
+                                <option value="Disponible">Disponible</option>
+                                <option value="No disponible">No disponible</option>
+                            </select>
+                        </div>
+                        <!-- Tarifa -->
+                        <div class="col-md-6">
+                            <label for="tarifa" class="form-label">Tarifa</label>
+                            <input type="number" class="form-control" id="tarifa" name="tarifa" min="0.01" step="0.01"
+                                required>
+                        </div>
+                        <!-- Estado -->
+                        <div class="col-md-6">
+                            <label for="estado" class="form-label">Estado</label>
+                            <select id="estado" name="estado" class="form-select" required>
+                                <option value="Excelente">Excelente</option>
+                                <option value="Bueno">Bueno</option>
+                                <option value="Regular">Regular</option>
+                                <option value="Malo">Malo</option>
+                            </select>
+                        </div>
+                        <!-- Tipo de combustible -->
+                        <div class="col-md-6">
+                            <label for="tipo_combustible" class="form-label">Tipo de combustible</label>
+                            <select id="tipo_combustible" name="tipo_combustible" class="form-select" required>
+                                <option value="extra">Extra</option>
+                                <option value="super">Super</option>
+                                <option value="diesel">Diesel</option>
+                                <option value="electricidad">Electricidad</option>
+                            </select>
+                        </div>
+                        <!-- Tipo de transmisión -->
+                        <div class="col-md-6">
+                            <label for="tipo_transmision" class="form-label">Tipo de transmisión</label>
+                            <select id="tipo_transmision" name="tipo_transmision" class="form-select" required>
+                                <option value="automatico">Automático</option>
+                                <option value="manual">Manual</option>
+                            </select>
+                        </div>
+                        <!-- Tipo de vehículo -->
+                        <div class="col-md-6">
+                            <label for="tipo_vehiculo" class="form-label">Tipo de vehículo</label>
+                            <select id="tipo_vehiculo" name="tipo_vehiculo" class="form-select" required>
+                                <option value="auto">Auto</option>
+                                <option value="camioneta">Camioneta</option>
+                                <option value="camion">Camión</option>
+                                <option value="maquinaria">Maquinaria</option>
+                            </select>
+                        </div>
+                        <!-- Cilindraje -->
+                        <div class="col-md-6">
+                            <label for="cilindraje" class="form-label">Cilindraje</label>
+                            <input type="text" class="form-control" id="cilindraje" name="cilindraje"
+                                placeholder="Ej: 1.6L o 2000 cc" required>
+                        </div>
+                        <!-- Imagen -->
+                        <div class="mb-3">
+                            <label for="imagen" class="form-label">Subir Imagen</label>
+                            <input type="file" class="form-control" id="imagen" name="imagen" accept="image/*" required>
+                            <!-- Contenedor de previsualización -->
+                            <div class="mt-3">
+                                <img id="previewImagen" src="" alt="Vista previa de la imagen" class="img-fluid border d-none" style="max-height: 200px; object-fit: cover;">
+                            </div>
+                        </div>
+                        
+                        <!-- Descripción -->
+                        <div class="col-md-12">
+                            <label for="descripcion" class="form-label">Descripción</label>
+                            <textarea class="form-control" id="descripcion" name="descripcion" rows="2"></textarea>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="modelo" class="form-label">Modelo</label>
-                        <input type="text" class="form-control" id="modelo" name="modelo" required>
-                        <small id="modeloHelp" class="form-text text-muted">Ingrese el modelo del vehículo.</small>
+                    <div class="text-end mt-4">
+                        <button type="submit" class="btn btn-primary">Agregar Vehículo</button>
                     </div>
-                    <div class="mb-3">
-                        <label for="matricula" class="form-label">Matricula</label>
-                        <input type="text" class="form-control" id="matricula" name="matricula"
-                            pattern="[A-Z]{3}-[0-9]{3}" required>
-                        <small class="form-text text-muted">Formato esperado: 3 letras mayúsculas seguidas de un guion y
-                            3 dígitos numéricos (Ej: ABC-123).</small>
-                    </div>
-                    <div class="mb-3">
-                        <label for="disponibilidad" class="form-label">Disponibilidad</label>
-                        <select id="disponibilidad" name="disponibilidad" class="form-select" required>
-                            <option value="Disponible">Disponible</option>
-                            <option value="No disponible">No disponible</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="tarifa" class="form-label">Tarifa</label>
-                        <input type="number" class="form-control" id="tarifa" name="tarifa" min="0.01" step="0.01"
-                            required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="estado" class="form-label">Estado</label>
-                        <select id="estado" name="estado" class="form-select" required>
-                            <option value="Excelente">Excelente</option>
-                            <option value="Bueno">Bueno</option>
-                            <option value="Regular">Regular</option>
-                            <option value="Malo">Malo</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="tipo_combustible" class="form-label">Tipo de combustible</label>
-                        <select id="tipo_combustible" name="tipo_combustible" class="form-select" required>
-                            <option value="extra">Extra</option>
-                            <option value="super">Super</option>
-                            <option value="diesel">Diesel</option>
-                            <option value="electricidad">Electricidad</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="tipo_transmision" class="form-label">Tipo de transmision</label>
-                        <select id="tipo_transmision" name="tipo_transmision" class="form-select" required>
-                            <option value="automatico">Automatico</option>
-                            <option value="manual">Manual</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="tipo_vehiculo" class="form-label">Tipo de vehiculo</label>
-                        <select id="tipo_vehiculo" name="tipo_vehiculo" class="form-select" required>
-                            <option value="auto">Auto</option>
-                            <option value="camioneta">Camioneta</option>
-                            <option value="camion">Camion</option>
-                            <option value="maquinaria">Maquinaria</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="descripcion" class="form-label">Descripción</label>
-                        <textarea class="form-control" id="descripcion" name="descripcion" rows="3"></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <label for="cilindraje" class="form-label">Cilindraje</label>
-                        <input type="text" class="form-control" id="cilindraje" name="cilindraje"
-                            placeholder="Ej: 1.6L o 2000 cc" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="imagen" class="form-label">Subir Imagen</label>
-                        <input type="file" class="form-control" id="imagen" name="imagen" accept="image/*" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Agregar Vehiculo</button>
                 </form>
             </div>
         </div>
